--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/formulario.html
@@ -25,7 +25,7 @@
 <body class="d-flex flex-column h-100 bg-light">
 
     <!-- Encabezado -->
-    <header th:replace="~{/admin/_fragments/header.html :: header}"></header>
+    <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <!-- Contenido principal -->
     <main class="container flex-grow-1 my-4">
@@ -214,24 +214,24 @@
     </main>
 
     <!-- Footer -->
-    <footer th:replace="~{/admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
 
     <!--JavaScript-->
     <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
-    <script th:if="${modificar}" th:src="@{/admin/javascript/incidencias/formulario/ajustarFechaModificar.js}"
-        src="../../../static/admin/javascript/incidencias/formulario/ajustarFechaModificar.js">
+    <script th:if="${modificar}" th:src="@{admin/javascript/incidencias/formulario/ajustarFechaModificar.js}"
+        src="../../../staticadmin/javascript/incidencias/formulario/ajustarFechaModificar.js">
         </script>
 
-    <script th:unless="${modificar}" th:src="@{/admin/javascript/incidencias/formulario/establecerFechaHoy.js}"
-        src="../../../static/admin/javascript/incidencias/formulario/establecerFechaHoy.js">
+    <script th:unless="${modificar}" th:src="@{admin/javascript/incidencias/formulario/establecerFechaHoy.js}"
+        src="../../../staticadmin/javascript/incidencias/formulario/establecerFechaHoy.js">
         </script>
 
-    <script th:src="@{/admin/javascript/reutilizables/buscarDesplegablesFiltros.js}"
-        src="../../../static/admin/javascript/reutilizables/buscarDesplegablesFiltros.js">
+    <script th:src="@{admin/javascript/reutilizables/buscarDesplegablesFiltros.js}"
+        src="../../../staticadmin/javascript/reutilizables/buscarDesplegablesFiltros.js">
         </script>
 
-    <script th:src="@{/admin/javascript/incidencias/formulario/ajustarDropdows.js}"
-        src="../../../static/admin/javascript/incidencias/formulario/ajustarDropdows.js">
+    <script th:src="@{admin/javascript/incidencias/formulario/ajustarDropdows.js}"
+        src="../../../staticadmin/javascript/incidencias/formulario/ajustarDropdows.js">
         </script>
 </body>
 
