--- a/GarciaMariaPablo/src/main/resources/templates/admin/error.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/error.html
@@ -24,7 +24,7 @@
 <body class="d-flex flex-column h-100 bg-light">
 
     <!-- Encabezado -->
-    <header th:replace="~{/admin/_fragments/header.html :: header}"></header>
+    <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <!-- Contenido principal -->
     <main class="container flex-grow-1 my-4 d-flex align-items-center justify-content-center text-center">
@@ -60,7 +60,7 @@
     </main>
 
     <!-- Footer -->
-    <footer th:replace="~{/admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
 
 </body>
 </html>
