--- a/GarciaMariaPablo/src/main/resources/templates/admin/estado/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/estado/formulario.html
@@ -24,7 +24,7 @@
 
 <body class="d-flex flex-column h-100 bg-light">
     <!-- Encabezado -->
-    <header th:replace="~{/admin/_fragments/header.html :: header}"></header>
+    <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <!-- Contenido principal -->
     <main class="container flex-grow-1 my-4">
@@ -130,12 +130,12 @@
     </main>
 
     <!-- Footer -->
-    <footer th:replace="~{/admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
 
     <!-- Javascript -->
     <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
-    <script src="../../../static/admin/javascript/estados/formulario/modificarVistaPrevia.js"
-        th:src="@{/admin/javascript/estados/formulario/modificarVistaPrevia.js}"></script>
+    <script src="../../../staticadmin/javascript/estados/formulario/modificarVistaPrevia.js"
+        th:src="@{admin/javascript/estados/formulario/modificarVistaPrevia.js}"></script>
 
 </body>
 
