--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/estadisticas.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/estadisticas.html
@@ -24,7 +24,7 @@
 <body class="d-flex flex-column h-100 bg-light">
 
     <!-- Encabezado -->
-    <header th:replace="~{/admin/_fragments/header.html :: header}"></header>
+    <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <!-- Contenido principal -->
     <main class="container flex-grow-1 my-4">
@@ -84,12 +84,12 @@
     </main>
 
     <!-- Footer -->
-    <footer th:replace="~{/admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
 
     <!--JavaScript-->
     <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
-    <script src="../../../static/admin/javascript/incidencias/estadisticas/generarEstadisticas.js"
-        th:src="@{/admin/javascript/incidencias/estadisticas/generarEstadisticas.js}"></script>
+    <script src="../../../staticadmin/javascript/incidencias/estadisticas/generarEstadisticas.js"
+        th:src="@{admin/javascript/incidencias/estadisticas/generarEstadisticas.js}"></script>
 
     <script th:inline="javascript">
         var incidencias = [[${ incidencias }]]; // Se coloca mediante thymeleaf los datos recibidos del back en una variable
