--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/inspeccionar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/inspeccionar.html
@@ -23,7 +23,7 @@
 <body class="d-flex flex-column h-100 bg-light">
 
     <!-- Encabezado -->
-    <header th:replace="~{/admin/_fragments/header.html :: header}"></header>
+    <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <!-- Contenido principal -->
     <main class="container flex-grow-1 my-4">
@@ -151,7 +151,7 @@
     </div>
 
     <!-- Footer -->
-    <footer th:replace="~{/admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
 
 </body>
 
