--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
@@ -22,7 +22,7 @@
 
 <body class="d-flex flex-column h-100 bg-light">
     <!-- Encabezado -->
-    <header th:replace="~{/admin/_fragments/header.html :: header}"></header>
+    <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <!-- Contenido principal -->
     <main class="container flex-grow-1 my-4">
@@ -318,16 +318,16 @@
     </div>
 
     <!-- Footer -->
-    <footer th:replace="~{/admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
 
     <!--JavaScript-->
     <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
-    <script src="../../../static/admin/javascript/incidencias/listar/borrarIncidencia.js"
-        th:src="@{/admin/javascript/incidencias/listar/borrarIncidencia.js}"></script>
-    <script src="../../../static/admin/javascript/incidencias/listar/limpiarFiltros.js"
-        th:src="@{/admin/javascript/incidencias/listar/limpiarFiltros.js}"></script>
+    <script src="../../../staticadmin/javascript/incidencias/listar/borrarIncidencia.js"
+        th:src="@{admin/javascript/incidencias/listar/borrarIncidencia.js}"></script>
+    <script src="../../../staticadmin/javascript/incidencias/listar/limpiarFiltros.js"
+        th:src="@{admin/javascript/incidencias/listar/limpiarFiltros.js}"></script>
 
-    <div th:replace="~{/admin/_fragments/listarJS.html :: import}"></div>
+    <div th:replace="~{admin/_fragments/listarJS.html :: import}"></div>
 
 </body>
 
