--- a/GarciaMariaPablo/src/main/resources/templates/admin/paginaPrincipal.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/paginaPrincipal.html
@@ -23,7 +23,7 @@
 <body class="d-flex flex-column h-100 bg-light">
 
     <!-- Encabezado -->
-    <header th:replace="~{/admin/_fragments/header.html :: header}"></header>
+    <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <!-- Contenido principal -->
     <main class="container my-5">
@@ -269,11 +269,11 @@
     </main>
 
     <!-- Footer -->
-    <footer th:replace="~{/admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
 
     <!--JavaScript-->
-    <script src="../../static/admin/javascript/paginaPrincipal/buscarSecciones.js"
-        th:src="@{/admin/javascript/paginaPrincipal/buscarSecciones.js}">
+    <script src="../../staticadmin/javascript/paginaPrincipal/buscarSecciones.js"
+        th:src="@{admin/javascript/paginaPrincipal/buscarSecciones.js}">
         </script>
 
 </body>
