--- a/GarciaMariaPablo/src/main/resources/templates/admin/usuario/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/usuario/listar.html
@@ -24,7 +24,7 @@
 <body class="d-flex flex-column h-100 bg-light">
 
     <!-- Encabezado -->
-    <header th:replace="~{/admin/_fragments/header.html :: header}"></header>
+    <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <!-- Contenido principal -->
     <main class="container flex-grow-1 my-4">
@@ -279,16 +279,16 @@
     </div>
 
     <!-- Footer -->
-    <footer th:replace="~{/admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
 
     <!--JavaScript-->
     <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
-    <script src="../../../static/admin/javascript/usuarios/listar/borrarUsuario.js"
-        th:src="@{/admin/javascript/usuarios/listar/borrarUsuario.js}"></script>
-    <script src="../../../static/admin/javascript/usuarios/listar/limpiarFiltros.js"
-        th:src="@{/admin/javascript/usuarios/listar/limpiarFiltros.js}"></script>
+    <script src="../../../staticadmin/javascript/usuarios/listar/borrarUsuario.js"
+        th:src="@{admin/javascript/usuarios/listar/borrarUsuario.js}"></script>
+    <script src="../../../staticadmin/javascript/usuarios/listar/limpiarFiltros.js"
+        th:src="@{admin/javascript/usuarios/listar/limpiarFiltros.js}"></script>
 
-    <div th:replace="~{/admin/_fragments/listarJS.html :: import}"></div>
+    <div th:replace="~{admin/_fragments/listarJS.html :: import}"></div>
 
 </body>
 
