--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
@@ -107,7 +107,7 @@
                                     class="btn btn-sm btn-outline-primary px-2 py-1 rounded-1 me-1">
                                     <i class="bi bi-eye"></i>
                                 </a>
-                                <a th:href="@{/incidencias/{id}(id=${incidencia.id})}" href="formulario.html"
+                                <a th:href="@{/incidencias/modificar/{id}(id=${incidencia.id})}" href="formulario.html"
                                     class="btn btn-sm btn-outline-success px-2 py-1 rounded-1 me-1">
                                     <i class="bi bi-pencil"></i>
                                 </a>
