--- a/GarciaMariaPablo/src/main/resources/templates/admin/usuario/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/usuario/listar.html
@@ -89,7 +89,7 @@
                                     th:text="${usuario.rol.name()}">REPORTANTE</span>
                             </td>
                             <td class="text-center">
-                                <a th:href="@{/usuarios/{id}(id=${usuario.id})}" th:if="${usuario.editable}"
+                                <a th:href="@{/usuarios/modificar/{id}(id=${usuario.id})}" th:if="${usuario.editable}"
                                     class="btn btn-sm btn-outline-success px-2 py-1 rounded-1 me-1">
                                     <i class="bi bi-pencil"></i>
                                 </a>
