--- a/GarciaMariaPablo/src/main/resources/templates/admin/paginaPrincipal.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/paginaPrincipal.html
@@ -30,7 +30,7 @@
 
         <h1 class="mb-4 text-center fw-bold txt-main">Panel de Administración</h1>
 
-        <div class="w-100 mx-auto mb-4" style="max-width: 600px;">
+        <div class="w-100 mx-auto mb-4 limited-width-600">
             <div class="input-group shadow-sm">
                 <span class="input-group-text bg-white">
                     <i class="bi bi-search text-muted"></i>
