--- a/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
@@ -101,8 +101,7 @@
                                 </a>
                                 <form class="d-inline" th:action="@{/estados/alternar/{id}(id=${estado.id})}" th:method="POST">
                                     <input type="hidden" name="_method" value="PUT">
-                                    <button type="submit" class="btn btn-sm px-2 py-1 rounded-1"
-                                        style="min-width: 90px;"
+                                    <button type="submit" class="btn btn-sm px-2 py-1 rounded-1 btn-min-width"
                                         th:classappend="${estado.activo} ? 'btn-outline-danger' : 'btn-outline-secondary'"
                                         th:text="${estado.activo} ? 'Desactivar' : 'Activar'">
                                         Desactivar
