--- a/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
@@ -28,6 +28,9 @@
 
     <!-- Contenido principal -->
     <main class="container flex-grow-1 my-4">
+
+        <div th:replace="~{admin/_fragments/errorMessage.html :: errorMessage}"></div>
+
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h1 class="h4 mb-0 fw-bold">
                 <i class="bi bi-tags me-2"></i>Listado de Estados
