--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/formulario.html
@@ -29,6 +29,9 @@
 
     <!-- Contenido principal -->
     <main class="container flex-grow-1 my-4">
+
+        <div th:replace="~{admin/_fragments/errorMessage.html :: errorMessage}"></div>
+
         <!-- Contenedor del formulario -->
         <div class="card border-0 rounded-3 shadow">
             <div class="card-header bg-main text-white rounded-top-3 p-3">
