--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
@@ -26,6 +26,9 @@
 
     <!-- Contenido principal -->
     <main class="container flex-grow-1 my-4">
+
+        <div th:replace="~{admin/_fragments/errorMessage.html :: errorMessage}"></div>
+
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h1 class="h4 mb-0 txt-main fw-bold">
                 <i class="bi bi-list-task me-2"></i>Listado de Incidencias
