--- a/GarciaMariaPablo/src/main/resources/templates/admin/usuario/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/usuario/formulario.html
@@ -30,10 +30,7 @@
     <!-- Contenido principal -->
     <main class="container flex-grow-1 my-4">
 
-        <div th:if="${error}" class="alert alert-danger d-flex align-items-center mb-4" role="alert">
-            <i class="bi bi-exclamation-triangle-fill me-2"></i>
-            <span th:text="${error}"></span>
-        </div>
+        <div th:replace="~{admin/_fragments/errorMessage.html :: errorMessage}"></div>
 
         <!-- Contenedor del formulario -->
         <div class="card border-0 rounded-3 shadow">
