--- a/GarciaMariaPablo/src/main/resources/templates/admin/paginaPrincipal.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/paginaPrincipal.html
@@ -13,11 +13,18 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- En este no se puede importar por que las rutas son diferentes -->
     <!-- Icono Web -->
     <link rel="shortcut icon" href="../../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
 
     <!-- Required Custom Css -->
     <link rel="stylesheet" href="../../static/css/required.css" th:href="@{/css/required.css}">
+
+    <!-- Javascript -->
+    <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
+    <script defer src="../../staticadmin/javascript/paginaPrincipal/buscarSecciones.js"
+        th:src="@{/admin/javascript/paginaPrincipal/buscarSecciones.js}"> </script>
+
 </head>
 
 <body class="d-flex flex-column h-100 bg-light">
@@ -271,10 +278,7 @@
     <!-- Footer -->
     <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
 
-    <!--JavaScript-->
-    <script src="../../staticadmin/javascript/paginaPrincipal/buscarSecciones.js"
-        th:src="@{/admin/javascript/paginaPrincipal/buscarSecciones.js}">
-        </script>
+
 
 </body>
 
