--- a/GarciaMariaPablo/src/main/resources/templates/error.html
+++ b/GarciaMariaPablo/src/main/resources/templates/error.html
@@ -13,11 +13,11 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- En este no se puede importar por que las rutas son diferentes -->
     <!-- Icono Web -->
-    <link rel="shortcut icon" href="../../../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
-
+    <link rel="shortcut icon" href="../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
     <!-- Required Custom Css -->
-    <link rel="stylesheet" href="../../../static/css/required.css" th:href="@{/css/required.css}">
+    <link rel="stylesheet" href="../static/css/required.css" th:href="@{/css/required.css}">
 
 </head>
 
