--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/estadisticas.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/estadisticas.html
@@ -6,18 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Incidencias - Estadísticas</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <div th:replace="~{admin/_fragments/head.html :: head}"></div>
 
-    <!-- Icono Web -->
-    <link rel="shortcut icon" href="../../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
+    <!--JavaScript-->
+    <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
+    <script defer src="../../../static/admin/javascript/incidencias/estadisticas/generarEstadisticas.js"
+        th:src="@{/admin/javascript/incidencias/estadisticas/generarEstadisticas.js}"></script>
 
-    <!-- Required Custom Css -->
-    <link rel="stylesheet" href="../../static/css/required.css" th:href="@{/css/required.css}">
+    <script defer th:inline="javascript">
+        var incidencias = [[${ incidencias }]]; // Se coloca mediante thymeleaf los datos recibidos del back en una variable
+        procesarIncidencias(incidencias) // Se llama a una funcion de generar estadisticas para que procese los datos y nos muestre datos que coinciden con el back.
+    </script>
 
 </head>
 
@@ -88,17 +87,6 @@
 
     <!-- Footer -->
     <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
-
-    <!--JavaScript-->
-    <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
-    <script src="../../../staticadmin/javascript/incidencias/estadisticas/generarEstadisticas.js"
-        th:src="@{/admin/javascript/incidencias/estadisticas/generarEstadisticas.js}"></script>
-
-    <script th:inline="javascript">
-        var incidencias = [[${ incidencias }]]; // Se coloca mediante thymeleaf los datos recibidos del back en una variable
-        procesarIncidencias(incidencias) // Se llama a una funcion de generar estadisticas para que procese los datos y nos muestre datos que coinciden con el back.
-    </script>
-
 </body>
 
 </html>
