--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/formulario.html
@@ -7,18 +7,25 @@
     <title th:if="${modificar}">Gestión de Incidencias - Modificar incidencia</title>
     <title th:unless="${modificar}">Gestión de Incidencias - Crear incidencia</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <div th:replace="~{admin/_fragments/head.html :: head}"></div>
 
-    <!-- Icono Web -->
-    <link rel="shortcut icon" href="../../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
+    <!--JavaScript-->
+    <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
+    <script defer th:if="${modificar}" th:src="@{/admin/javascript/incidencias/formulario/ajustarFechaModificar.js}"
+        src="../../../staticadmin/javascript/incidencias/formulario/ajustarFechaModificar.js">
+        </script>
 
-    <!-- Required Custom Css -->
-    <link rel="stylesheet" href="../../static/css/required.css" th:href="@{/css/required.css}">
+    <script defer th:unless="${modificar}" th:src="@{/admin/javascript/incidencias/formulario/establecerFechaHoy.js}"
+        src="../../../staticadmin/javascript/incidencias/formulario/establecerFechaHoy.js">
+        </script>
+
+    <script defer th:src="@{/admin/javascript/reutilizables/buscarDesplegablesFiltros.js}"
+        src="../../../staticadmin/javascript/reutilizables/buscarDesplegablesFiltros.js">
+        </script>
+
+    <script defer th:src="@{/admin/javascript/incidencias/formulario/ajustarDropdows.js}"
+        src="../../../staticadmin/javascript/incidencias/formulario/ajustarDropdows.js">
+        </script>
 
 </head>
 
@@ -218,24 +225,6 @@
 
     <!-- Footer -->
     <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
-
-    <!--JavaScript-->
-    <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
-    <script th:if="${modificar}" th:src="@{/admin/javascript/incidencias/formulario/ajustarFechaModificar.js}"
-        src="../../../staticadmin/javascript/incidencias/formulario/ajustarFechaModificar.js">
-        </script>
-
-    <script th:unless="${modificar}" th:src="@{/admin/javascript/incidencias/formulario/establecerFechaHoy.js}"
-        src="../../../staticadmin/javascript/incidencias/formulario/establecerFechaHoy.js">
-        </script>
-
-    <script th:src="@{/admin/javascript/reutilizables/buscarDesplegablesFiltros.js}"
-        src="../../../staticadmin/javascript/reutilizables/buscarDesplegablesFiltros.js">
-        </script>
-
-    <script th:src="@{/admin/javascript/incidencias/formulario/ajustarDropdows.js}"
-        src="../../../staticadmin/javascript/incidencias/formulario/ajustarDropdows.js">
-        </script>
 </body>
 
 </html>
