--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
@@ -6,18 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Incidencias - Listar incidencias</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <div th:replace="~{admin/_fragments/head.html :: head}"></div>
 
-    <!-- Icono Web -->
-    <link rel="shortcut icon" href="../../../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
+    <!--JavaScript-->
+    <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
+    <script defer src="../../../staticadmin/javascript/incidencias/listar/borrarIncidencia.js"
+        th:src="@{/admin/javascript/incidencias/listar/borrarIncidencia.js}"></script>
+    <script defer src="../../../staticadmin/javascript/incidencias/listar/limpiarFiltros.js"
+        th:src="@{/admin/javascript/incidencias/listar/limpiarFiltros.js}"></script>
 
-    <!-- Required Custom Css -->
-    <link rel="stylesheet" href="../../../static/css/required.css" th:href="@{/css/required.css}">
+    <div th:replace="~{admin/_fragments/listarJS.html :: import}"></div>
+
 </head>
 
 <body class="d-flex flex-column h-100 bg-light">
@@ -97,7 +96,7 @@
                             <td th:text="${incidencia.ubicacion}">Planta 1</td>
                             <td th:text="${incidencia.reportante.nombre}">Ana Gómez</td>
                             <td>
-                                <span class="badge rounded-pill fw-bold px-3" th:text="${incidencia.estado.nombre}"
+                                <span class="badge w-badge rounded-pill fw-bold px-3" th:text="${incidencia.estado.nombre}"
                                     style="background-color: yellowgreen; color: white;"
                                     th:style="'background-color: '+${incidencia.estado.colorFondo}+';color: '+${incidencia.estado.colorTexto}">
                                     Pendiente
@@ -322,16 +321,6 @@
 
     <!-- Footer -->
     <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
-
-    <!--JavaScript-->
-    <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
-    <script src="../../../staticadmin/javascript/incidencias/listar/borrarIncidencia.js"
-        th:src="@{/admin/javascript/incidencias/listar/borrarIncidencia.js}"></script>
-    <script src="../../../staticadmin/javascript/incidencias/listar/limpiarFiltros.js"
-        th:src="@{/admin/javascript/incidencias/listar/limpiarFiltros.js}"></script>
-
-    <div th:replace="~{admin/_fragments/listarJS.html :: import}"></div>
-
 </body>
 
 </html>
