--- a/GarciaMariaPablo/src/main/resources/templates/admin/usuario/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/usuario/formulario.html
@@ -7,18 +7,14 @@
     <title th:if="${modificar}">Gestión de Usuarios - Modificar Usuario</title>
     <title th:unless="${modificar}">Gestión de Usuarios - Crear Usuario</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <div th:replace="~{admin/_fragments/head.html :: head}"></div>
 
-    <!-- Icono Web -->
-    <link rel="shortcut icon" href="../../../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
-
-    <!-- Required Custom Css -->
-    <link rel="stylesheet" href="../../../static/css/required.css" th:href="@{/css/required.css}">
+    <!--JavaScript-->
+    <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
+    <script defer src="../../../staticadmin/javascript/reutilizables/buscarDesplegablesFiltros.js"
+        th:src="@{/admin/javascript/reutilizables/buscarDesplegablesFiltros.js}"></script>
+    <script defer src="../../../staticadmin/javascript/usuarios/formulario/seleccionarRoles.js"
+        th:src="@{/admin/javascript/usuarios/formulario/seleccionarRoles.js}"></script>
 
 </head>
 
@@ -142,13 +138,6 @@
 
     <!-- Footer -->
     <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
-
-    <!--JavaScript-->
-    <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
-    <script src="../../../staticadmin/javascript/reutilizables/buscarDesplegablesFiltros.js"
-        th:src="@{/admin/javascript/reutilizables/buscarDesplegablesFiltros.js}"></script>
-    <script src="../../../staticadmin/javascript/usuarios/formulario/seleccionarRoles.js"
-        th:src="@{/admin/javascript/usuarios/formulario/seleccionarRoles.js}"></script>
 </body>
 
 </html>
