--- a/GarciaMariaPablo/src/main/resources/templates/admin/usuario/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/usuario/listar.html
@@ -6,18 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Gestión de Usuarios - Listado</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <div th:replace="~{admin/_fragments/head.html :: head}"></div>
+    
+    <!--JavaScript-->
+    <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
+    <script defer src="../../../staticadmin/javascript/usuarios/listar/borrarUsuario.js"  th:src="@{/admin/javascript/usuarios/listar/borrarUsuario.js}"></script>
+    <script defer src="../../../staticadmin/javascript/usuarios/listar/limpiarFiltros.js" th:src="@{/admin/javascript/usuarios/listar/limpiarFiltros.js}"></script>
 
-    <!-- Icono Web -->
-    <link rel="shortcut icon" href="../../../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
-
-    <!-- Required Custom Css -->
-    <link rel="stylesheet" href="../../../static/css/required.css" th:href="@{/css/required.css}">
+    <div th:replace="~{admin/_fragments/listarJS.html :: import}"></div>
 
 </head>
 
@@ -86,7 +82,7 @@
                             <td th:text="${usuario.nombre}">Juan</td>
                             <td th:text="${usuario.apellidos}">Pérez García</td>
                             <td>
-                                <span class="badge rounded-pill fw-bold px-3 w-50"
+                                <span class="badge rounded-pill fw-bold px-3 w-badge"
                                     th:classappend="${usuario.rol.name() == 'admin'} ? 'bg-main' : (${usuario.rol.name() == 'tecnico'} ? 'bg-primary' : 'bg-info')"
                                     th:text="${usuario.rol.name()}">REPORTANTE</span>
                             </td>
@@ -282,16 +278,6 @@
 
     <!-- Footer -->
     <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
-
-    <!--JavaScript-->
-    <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
-    <script src="../../../staticadmin/javascript/usuarios/listar/borrarUsuario.js"
-        th:src="@{/admin/javascript/usuarios/listar/borrarUsuario.js}"></script>
-    <script src="../../../staticadmin/javascript/usuarios/listar/limpiarFiltros.js"
-        th:src="@{/admin/javascript/usuarios/listar/limpiarFiltros.js}"></script>
-
-    <div th:replace="~{admin/_fragments/listarJS.html :: import}"></div>
-
 </body>
 
 </html>
