Ajustar estilos CSS

--- a/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
@@ -77,7 +77,7 @@
                         <tr th:each="estado : ${estados}">
                             <td th:text="${estado.nombre}">Pendiente</td>
                             <td>
-                                <span class="badge rounded-pill fw-bold px-3 w-badge"
+                                <span class="badge rounded-pill fw-bold px-3 w-badge-r"
                                     th:style="'background-color:' + ${estado.colorFondo} + '; color:' + ${estado.colorTexto}">
                                     <span th:text="${estado.nombre}">Pendiente</span>
                                 </span>
