--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
@@ -96,7 +96,7 @@
                             <td th:text="${incidencia.ubicacion}">Planta 1</td>
                             <td th:text="${incidencia.reportante.nombre}">Ana Gómez</td>
                             <td>
-                                <span class="badge w-badge rounded-pill fw-bold px-3" th:text="${incidencia.estado.nombre}"
+                                <span class="badge w-100 rounded-pill fw-bold px-3" th:text="${incidencia.estado.nombre}"
                                     style="background-color: yellowgreen; color: white;"
                                     th:style="'background-color: '+${incidencia.estado.colorFondo}+';color: '+${incidencia.estado.colorTexto}">
                                     Pendiente
