--- a/GarciaMariaPablo/src/main/resources/static/css/required.css
+++ b/GarciaMariaPablo/src/main/resources/static/css/required.css
@@ -31,9 +31,16 @@
     width: 100%;
 }
 
+.w-badge-r {
+    width: 50%;
+}
+
 @media (max-width: 992px) {
     .w-badge {
         width: 50%;
+    }
+    .w-badge-r {
+        width: 100%;
     }
 }
 
